--- a/tasks/file_templated.yml
+++ b/tasks/file_templated.yml
@@ -29,6 +29,8 @@
       ansible.builtin.debug:
         var: systemd_file_backup_present
         verbosity: 3
+      tags:
+        - debug
 
     - name: Systemd unit file directory present
       ansible.builtin.file:
@@ -46,11 +48,14 @@
         owner: root
         group: root
       register: systemd_file_present
+      notify: Systemd daemon-reload
 
     - name: Debug systemd_file_present
       ansible.builtin.debug:
         var: systemd_file_present
         verbosity: 3
+      tags:
+        - debug
 
     - name: Delete the backup when the file hasn't changed
       ansible.builtin.file:
@@ -60,13 +65,6 @@
       when:
         - systemd_file_present is defined
         - not systemd_file_present.changed | bool
-
-    - name: Set systemd_file_changed if the systemd unit file was changed
-      ansible.builtin.set_fact:
-        systemd_file_changed: true
-      when:
-        - systemd_file_present is defined
-        - systemd_file_present.changed | bool
 
   tags:
     - systemd
