--- a/tasks/unit_absent.yml
+++ b/tasks/unit_absent.yml
@@ -15,6 +15,8 @@
       ansible.builtin.debug:
         var: systemd_unit
         verbosity: 2
+      tags:
+        - debug
 
     - name: Systemd unit stopped and disabled
       ansible.builtin.systemd_service:
