--- a/meta/internal_argument_specs.yml
+++ b/meta/internal_argument_specs.yml
@@ -73,6 +73,10 @@ argument_specs:
         type: str
         required: false
         description: Internal variable for a systemd unit file path.
+      systemd_file_absent:
+        type: dict
+        required: false
+        description: Internal dictionary for the results from moving a Systemd unit file to a backup path.
       systemd_file_b64encoded:
         type: dict
         required: false
