fix state tracking

--- a/meta/internal_argument_specs.yml
+++ b/meta/internal_argument_specs.yml
@@ -100,6 +100,10 @@ argument_specs:
           - 3
           - 4
           - 5
+      systemd_file_edited:
+        type: dict
+        required: false
+        description: Internal dictionary for the results from editing a Systemd unit file.
       systemd_file_masked:
         type: dict
         required: false
