--- a/tasks/unit_started.yml
+++ b/tasks/unit_started.yml
@@ -11,20 +11,45 @@
 - name: Start systemd unit
   block:
 
-    - name: "Systemd unit {{ systemd_unit.name }} started"
+    - name: Check the state of services
+      ansible.builtin.service_facts:
+      register: systemd_service_facts
+
+    - name: "Systemd unit started when not running for {{ systemd_unit.name }}"
       ansible.builtin.systemd_service:
         name: "{{ systemd_unit.name }}"
         state: started
+      vars:
+        systemd_service_jpq: 'ansible_facts.services.["{{ systemd_unit.name }}.service"]|[0]'
       register: systemd_service_started
       until:
         - systemd_service_started.status.SubState is defined
         - systemd_service_started.status.SubState == "running"
         - systemd_service_started.status.Result is defined
         - systemd_service_started.status.Result == "success"
-      retries: 20
-      delay: 3
+      retries: 5
+      delay: 2
+      when: (systemd_service_facts | community.general.json_query(systemd_service_jpq)).state != "running"
 
-    - name: "Debug the results from starting the {{ systemd_unit.name }} systemd service"
+    - name: "Systemd unit restarted when unit file(s) are changed for {{ systemd_unit.name }}"
+      ansible.builtin.systemd_service:
+        name: "{{ systemd_unit.name }}"
+        state: restarted
+      vars:
+        systemd_service_jpq: 'ansible_facts.services.["{{ systemd_unit.name }}.service"]|[0]'
+      register: systemd_service_restarted
+      until:
+        - systemd_service_started.status.SubState is defined
+        - systemd_service_started.status.SubState == "running"
+        - systemd_service_started.status.Result is defined
+        - systemd_service_started.status.Result == "success"
+      retries: 5
+      delay: 2
+      when:
+        - systemd_file_changed | bool
+        - (systemd_service_facts | community.general.json_query(systemd_service_jpq)).state == "running"
+
+    - name: "Debug the results from (re)starting the systemd service {{ systemd_unit.name }}"
       ansible.builtin.debug:
         var: systemd_service_started
         verbosity: "{% if ansible_check_mode | bool or ansible_diff_mode | bool %}1{% else %}2{% endif %}"
