--- a/tasks/file_absent.yml
+++ b/tasks/file_absent.yml
@@ -34,8 +34,16 @@
       vars:
         systemd_file_backup: "{{ systemd_file.path | ansible.builtin.dirname }}/.{{ systemd_file.path | ansible.builtin.basename }}.{{ ansible_facts.date_time.iso8601_basic_short }}.bak"
       changed_when: true
+      register: systemd_file_absent
       when: systemd_file_state.stat.exists | bool
       notify: Systemd daemon-reload
+
+    - name: Set systemd_file_changed to true
+      ansible.builtin.set_fact:
+        systemd_file_changed: true
+      when:
+        - systemd_file_absent.changed is defined
+        - systemd_file_absent.changed | bool
 
     - name: Stat the systemd unit file
       ansible.builtin.stat:
