--- a/tasks/file_masked.yml
+++ b/tasks/file_masked.yml
@@ -14,7 +14,7 @@
     - name: Debug the systemd unit file variables
       ansible.builtin.debug:
         var: systemd_file
-        verbosity: 2
+        verbosity: "{% if ansible_check_mode | bool or ansible_diff_mode | bool %}1{% else %}2{% endif %}"
       tags:
         - debug
 
@@ -64,10 +64,17 @@
         (systemd_file_state.stat.lnk_source != "/dev/null"))
       notify: Systemd daemon-reload
 
+    - name: Set systemd_file_changed to true
+      ansible.builtin.set_fact:
+        systemd_file_changed: true
+      when: >-
+            ((systemd_file_absent.changed is defined) and (systemd_file_absent.changed | bool)) or
+            ((systemd_file_masked.changed is defined) and (systemd_file_masked.changed | bool))
+
     - name: Debug systemd_file_masked
       ansible.builtin.debug:
         var: systemd_file_masked
-        verbosity: "{% if ansible_check_mode | bool or ansible_diff_mode | bool %}0{% else %}1{% endif %}"
+        verbosity: "{% if ansible_check_mode | bool or ansible_diff_mode | bool %}1{% else %}2{% endif %}"
       tags:
         - debug
 
