--- a/tasks/file_templated.yml
+++ b/tasks/file_templated.yml
@@ -28,7 +28,7 @@
     - name: Debug systemd_file_backup_present
       ansible.builtin.debug:
         var: systemd_file_backup_present
-        verbosity: 3
+        verbosity: "{% if ansible_check_mode | bool or ansible_diff_mode | bool %}1{% else %}2{% endif %}"
       tags:
         - debug
 
@@ -50,10 +50,17 @@
       register: systemd_file_present
       notify: Systemd daemon-reload
 
+    - name: Set systemd_file_changed to true
+      ansible.builtin.set_fact:
+        systemd_file_changed: true
+      when:
+        - systemd_file_present.changed is defined
+        - systemd_file_present.changed | bool
+
     - name: Debug systemd_file_present
       ansible.builtin.debug:
         var: systemd_file_present
-        verbosity: 3
+        verbosity: "{% if ansible_check_mode | bool or ansible_diff_mode | bool %}1{% else %}2{% endif %}"
       tags:
         - debug
 
