--- a/tasks/fix_files.yml
+++ b/tasks/fix_files.yml
@@ -22,7 +22,7 @@
         - name: Debug systemd_broken_symlinks_absent
           ansible.builtin.debug:
             var: systemd_broken_symlinks_absent
-            verbosity: 2
+            verbosity: "{% if ansible_check_mode | bool or ansible_diff_mode | bool %}1{% else %}2{% endif %}"
           tags:
             - debug
 
