--- a/tasks/unit_absent.yml
+++ b/tasks/unit_absent.yml
@@ -14,7 +14,7 @@
     - name: Debug the systemd unit variables
       ansible.builtin.debug:
         var: systemd_unit
-        verbosity: 2
+        verbosity: "{% if ansible_check_mode | bool or ansible_diff_mode | bool %}1{% else %}2{% endif %}"
       tags:
         - debug
 
@@ -24,11 +24,7 @@
         enabled: false
         state: stopped
       register: systemd_unit_stopped
-
-    - name: Systemd daemon-reload  # noqa: no-handler
-      ansible.builtin.systemd_service:
-        daemon_reload: true
-      when: systemd_unit_stopped.changed
+      notify: Systemd daemon-reload
 
     - name: Systemd packages absent
       ansible.builtin.apt:
@@ -38,6 +34,7 @@
       when:
         - systemd_unit.pkgs is defined
         - systemd_unit.pkgs | length > 0
+      notify: Systemd daemon-reload
 
     - name: Systemd unit files absent
       ansible.builtin.include_tasks: file_absent.yml
